--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             sparksite</a>
         <ul class="right hide-on-med-and-down">
             <li><a href="index.html">Home</a></li>
-            <li><a href="person_selina.html">Selina Lanz</a></li>
+            <li><a href="selina.html">Selina Lanz</a></li>
             <li><a href="#">Uriel Brawer</a></li>
             <li><a href="#">Michelle Rickenmann</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -26,7 +26,7 @@
 
         <ul id="nav-mobile" class="sidenav">
             <li><a href="index.html">Home</a></li>
-            <li><a href="person_selina.html">Selina Lanz</a></li>
+            <li><a href="selina.html">Selina Lanz</a></li>
             <li><a href="#">Uriel Brawer</a></li>
             <li><a href="#">Michelle Rickenmann</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -35,114 +35,60 @@
     </div>
 </nav>
 
-<div id="index-banner" class="parallax-container">
-    <div class="section no-pad-bot">
-        <div class="container">
-            <br><br>
-            <h1 class="header center teal-text text-lighten-2">Parallax Template</h1>
-            <div class="row center">
-                <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
-            </div>
-            <div class="row center">
-                <a href="http://materializecss.com/getting-started.html" id="download-button"
-                   class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
-            </div>
-            <br><br>
-
-        </div>
+<div class="section no-pad-bot">
+    <div class="container">
+        <br><br>
+        <h4 class="header center"><b>Our UI/UX is so user-friendly, even <span class="highlights">your cat</span>
+            could figure it out</b></h4>
+        <br><br>
     </div>
-    <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
 </div>
 
 
 <div class="container">
     <div class="section">
-
-        <!--   Icon Section   -->
+        <div>
+            <h3 class="header"><b>Hello there</b></h3>
+        </div>
+        <div class="container">
+            <br><br>
+            <h4 class="header center"><b>We’re a team of three <span class="highlights">passionate developers</span>,
+                turning ideas into powerful digital solutions. </b></h4>
+            <br><br>
+        </div>
         <div class="row">
             <div class="col s12 m4">
-                <div class="icon-block">
-                    <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-                    <h5 class="center">Speeds up development</h5>
-
-                    <p class="light">We did most of the heavy lifting for you to provide a default stylings that
-                        incorporate our custom components. Additionally, we refined animations and transitions to
-                        provide a smoother experience for developers.</p>
-                </div>
+                <a href="selina.html" class="center">
+                    <img class="logo" src="assets/sublogo.svg" alt="Sparksite Logo">Selina</a>
             </div>
 
             <div class="col s12 m4">
-                <div class="icon-block">
-                    <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-                    <h5 class="center">User Experience Focused</h5>
-
-                    <p class="light">By utilizing elements and principles of Material Design, we were able to create a
-                        framework that incorporates components and animations that provide more feedback to users.
-                        Additionally, a single underlying responsive system across all platforms allow for a more
-                        unified user experience.</p>
-                </div>
+                <a href="#" class="center">
+                    <img class="logo" src="assets/sublogo.svg" alt="Sparksite Logo">Uriel</a>
             </div>
 
             <div class="col s12 m4">
-                <div class="icon-block">
-                    <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-                    <h5 class="center">Easy to work with</h5>
-
-                    <p class="light">We have provided detailed documentation as well as specific code examples to help
-                        new users get started. We are also always open to feedback and can answer any questions a user
-                        may have about Materialize.</p>
-                </div>
+                <a href="#" class="center">
+                    <img class="logo" src="assets/sublogo.svg" alt="Sparksite Logo">Michelle</a>
             </div>
         </div>
-
-    </div>
-</div>
-
-
-<div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
         <div class="container">
-            <div class="row center">
-                <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
-            </div>
-        </div>
-    </div>
-    <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
-</div>
-
-<div class="container">
-    <div class="section">
-
-        <div class="row">
-            <div class="col s12 center">
-                <h3><i class="mdi-content-send brown-text"></i></h3>
-                <h4>Contact Us</h4>
-                <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque
-                    id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut
-                    ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem
-                    neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu
-                    mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum
-                    ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum
-                    primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
-            </div>
+            <br><br>
+            <h4 class="header"><b>We create sleek web apps and robust backend systems with a focus on intuitive UI/UX.</b>
+                <br></br>
+                <b>Committed to clean code and exceptional design, we’re your partners in innovation.</b></h4>
+            <br><br>
         </div>
 
-    </div>
-</div>
-
-
-<div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
         <div class="container">
-            <div class="row center">
-                <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
-            </div>
+            <br><br>
+            <a href="contact.html" class="header"><b>Let’s collaborate!</b></a>
         </div>
+
     </div>
-    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
 </div>
 
-<footer class="page-footer teal">
+<footer class="page-footer">
     <div class="container">
         <div class="row">
             <div class="col l6 s12">
