--- a/selina.html
+++ b/selina.html
@@ -18,7 +18,7 @@
             sparksite</a>
         <ul class="right hide-on-med-and-down">
             <li><a href="index.html">Home</a></li>
-            <li><a href="person_selina.html">Selina Lanz</a></li>
+            <li><a href="selina.html">Selina Lanz</a></li>
             <li><a href="#">Uriel Brawer</a></li>
             <li><a href="#">Michelle Rickenmann</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -26,7 +26,7 @@
 
         <ul id="nav-mobile" class="sidenav">
             <li><a href="index.html">Home</a></li>
-            <li><a href="person_selina.html">Selina Lanz</a></li>
+            <li><a href="selina.html">Selina Lanz</a></li>
             <li><a href="#">Uriel Brawer</a></li>
             <li><a href="#">Michelle Rickenmann</a></li>
             <li><a href="contact.html">Contact</a></li>
