start screen for mobile begun

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
 </nav>
 
-<div class="section no-pad-bot">
+<div class="section no-pad-bot welcome_screen">
     <div class="container">
         <br><br>
         <h4 class="header center"><b>Our UI/UX is so user-friendly, even <span class="highlights">your cat</span>
