colors were added

--- a/index.html
+++ b/index.html
@@ -47,29 +47,33 @@
 
 <div class="container">
     <div class="section">
-        <div>
-            <h3 class="header"><b>Hello there</b></h3>
-        </div>
-        <div class="container">
-            <br><br>
-            <h4 class="header center"><b>We’re a team of three <span class="highlights">passionate developers</span>,
-                turning ideas into powerful digital solutions. </b></h4>
-            <br><br>
-        </div>
-        <div class="row">
-            <div class="col s12 m4">
-                <a href="selina.html" class="center">
-                    <img class="logo" src="assets/sublogo.svg" alt="Sparksite Logo">Selina</a>
+        <div class="green_block">
+            <div>
+                <h3 class="header center" 
+                style="margin-top: 0px;
+                    padding-top: 10px;"><b>Hello there</b></h3>
             </div>
-
-            <div class="col s12 m4">
-                <a href="#" class="center">
-                    <img class="logo" src="assets/sublogo.svg" alt="Sparksite Logo">Uriel</a>
+            <div class="container">
+                <br><br>
+                <h4 class="header center"><b>We’re a team of three <span class="highlights">passionate developers</span>,
+                    turning ideas into powerful digital solutions. </b></h4>
+                <br><br>
             </div>
+            <div class="row">
+                <div class="col s12 m4">
+                    <a href="selina.html" class="center">
+                        <img class="logo" src="assets/sublogo.svg" alt="Sparksite Logo">Selina</a>
+                </div>
 
-            <div class="col s12 m4">
-                <a href="#" class="center">
-                    <img class="logo" src="assets/sublogo.svg" alt="Sparksite Logo">Michelle</a>
+                <div class="col s12 m4">
+                    <a href="#" class="center">
+                        <img class="logo" src="assets/sublogo.svg" alt="Sparksite Logo">Uriel</a>
+                </div>
+
+                <div class="col s12 m4">
+                    <a href="#" class="center">
+                        <img class="logo" src="assets/sublogo.svg" alt="Sparksite Logo">Michelle</a>
+                </div>
             </div>
         </div>
         <div class="container">
