--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
     <div class="section">
         <div class="green_block">
             <div>
-                <h3 class="header center" 
-                style="margin-top: 0px;
-                    padding-top: 10px;"><b>Hello there</b></h3>
+                <h3 class="header center"><b>Hello there</b></h3>
             </div>
             <div class="container">
                 <br><br>
