added minimal changes to contact page

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class="container">
             <br><br>
-            <a href="contact.html" class="header"><b>Let’s collaborate!</b></a>
+            <a href="contact.html" class="link"><b>Let’s collaborate!</b></a>
         </div>
 
     </div>
