--- a/contact.html
+++ b/contact.html
@@ -51,9 +51,9 @@
         <input type="text" id="email" name="email" placeholder="Your email..">
 
         <label for="message">Message</label>
-        <textarea id="message" name="message" placeholder="Your message to us.." style="height:200px"></textarea>
+        <textarea class="text-input" id="message" name="message" placeholder="Your message to us.." style="height:200px"></textarea>
 
-        <input type="submit" value="Submit">
+        <input class="button" type="submit" value="Submit">
 
     </form>
 </div>
