--- a/selina.html
+++ b/selina.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -35,24 +35,23 @@
     </div>
 </nav>
 
-<div id="index-banner" class="parallax-container">
-    <div class="section no-pad-bot">
-        <div class="container">
-            <br><br>
-            <h1 class="header center teal-text text-lighten-2">Selina Lanz</h1>
-            <div class="row center">
-                <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
-            </div>
-            <div class="row center">
-                <a href="http://materializecss.com/getting-started.html" id="download-button"
-                   class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
-            </div>
-            <br><br>
 
-        </div>
+<section class="profil">
+
+    <div class="description">
+        <h1 class="center">Selina Lanz</h1>
+        <img src="assets/selina/Profilbild.JPG" alt="Profilbild" class="responsive-img"/>
+        <h5 class="center">Exploring creativity, innovation, and new horizons—one step at a time!</h5>
+        <p class="light">I'm a 24-year-old Bachelor’s student in iCompetence at the FHNW in Brugg.
+            Creative and open-minded, I enjoy exploring new places, and I'm also an active member of a
+            Guggenmusik. In my free time, I love to read and discover new perspectives through books.</p>
     </div>
-    <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
-</div>
+
+    <
+
+
+
+</section>
 
 
 <div class="container">
@@ -62,19 +61,8 @@
         <div class="row">
             <div class="col s12 m4">
                 <div class="icon-block">
-                    <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-                    <h5 class="center">Speeds up development</h5>
-
-                    <p class="light">We did most of the heavy lifting for you to provide a default stylings that
-                        incorporate our custom components. Additionally, we refined animations and transitions to
-                        provide a smoother experience for developers.</p>
-                </div>
-            </div>
-
-            <div class="col s12 m4">
-                <div class="icon-block">
                     <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-                    <h5 class="center">User Experience Focused</h5>
+                    <h5 class="center">Skills</h5>
 
                     <p class="light">By utilizing elements and principles of Material Design, we were able to create a
                         framework that incorporates components and animations that provide more feedback to users.
@@ -86,13 +74,58 @@
             <div class="col s12 m4">
                 <div class="icon-block">
                     <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-                    <h5 class="center">Easy to work with</h5>
+                    <h5 class="center">Projects</h5>
 
                     <p class="light">We have provided detailed documentation as well as specific code examples to help
                         new users get started. We are also always open to feedback and can answer any questions a user
                         may have about Materialize.</p>
                 </div>
             </div>
+
+            <div class="col s12 m4">
+                <div class="icon-block">
+                    <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
+                    <h5 class="center">Education</h5>
+                    <ul>
+                        <li>iCompetence FHNW Brugg</li>
+                        <li>Professional Maturity Berufsfachschule Langenthal</li>
+                    </ul>
+                    <p class="light">
+                        Professional Maturity Berufsfachschule Langenthal
+                    </p>
+                </div>
+            </div>
+
+            <div class="col s12 m4">
+                <div class="icon-block">
+                    <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
+                    <h5 class="center">Experience</h5>
+
+                    <p class="light">Office clerk Marketing and Printing Kuert Druck AG Langenthal</p>
+                </div>
+            </div>
+
+            <div class="col s12 m4">
+                <div class="icon-block">
+                    <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
+                    <h5 class="center">Language</h5>
+
+                    <p class="light">German Native
+                        English Fluent
+                        French Intermediate
+                    </p>
+                </div>
+            </div>
+
+            <div class="col s12 m4">
+                <div class="icon-block">
+                    <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
+                    <h5 class="center">Hobbies & Interests</h5>
+
+                    <p class="light"></p>
+                </div>
+            </div>
+
         </div>
 
     </div>
