edited contact form css

--- a/contact.html
+++ b/contact.html
@@ -36,60 +36,76 @@
 </nav>
 
 <body>
-<h1 class="header center teal-text text-lighten-2">Let's chat!</h1>
 
 <div class="container">
-    <form action="action_page.php">
-
-        <label for="fname">First Name</label>
-        <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-        <label for="lname">Last Name</label>
-        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-
-        <label for="email">Email</label>
-        <input type="text" id="email" name="email" placeholder="Your email..">
-
-        <label for="message">Message</label>
-        <textarea class="text-input" id="message" name="message" placeholder="Your message to us.." style="height:200px"></textarea>
-
-        <input class="button" type="submit" value="Submit">
-
-    </form>
-</div>
-
-<footer class="page-footer teal">
-    <div class="container">
-        <div class="row">
-            <div class="col l6 s12">
-                <h5 class="white-text">Company Bio</h5>
-                <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's
-                    our full time job. Any amount would help support and continue development on this project and is
-                    greatly appreciated.</p>
-
+    <div>
+        <h1 class="center">Let's chat!</h1>
+        <form method="POST" id="contact-form" name="contact-form" class="contact-form d-flex">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <label class="label" for="name">Full Name</label>
+                        <input type="text" class="form-control" name="name" id="name" placeholder="Name">
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <label class="label" for="email">Email Address</label>
+                        <input type="text" class="form-control" name="email" id="email" placeholder="Email">
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <label class="label" for="subject">Subject</label>
+                        <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject">
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <label class="label" for="message">Message</label>
+                        <textarea class="form-control" name="message" id="message" placeholder="Message" rows="4"></textarea>
+                    </div>
+                </div>
+                <div class="col-md-12 button-container">
+                    <input class="button" type="submit" value="Submit">
+                </div>
             </div>
-            <div class="col l3 s12">
-                <h5 class="white-text">Connect</h5>
-                <ul>
-                    <li><a class="white-text" href="#!">sparksite@gmail.com</a></li>
-                    <li><a class="white-text" href="#!">selinalanz.sparksite@gmail.com</a></li>
-                    <li><a class="white-text" href="#!">urielbrawer.sparksite@gmail.com</a></li>
-                    <li><a class="white-text" href="#!">michellerickenmann.sparksite@gmail.com</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="footer-copyright">
-        <div class="container">
-            Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
-        </div>
-    </div>
-</footer>
+        </form>
 
-<!--  Scripts-->
-<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="js/materialize.js"></script>
-<script src="js/init.js"></script>
+        <footer class="page-footer teal">
+            <div class="container">
+                <div class="row">
+                    <div class="col l6 s12">
+                        <h5 class="white-text">Company Bio</h5>
+                        <p class="grey-text text-lighten-4">We are a team of college students working on this project
+                            like it's
+                            our full time job. Any amount would help support and continue development on this project
+                            and is
+                            greatly appreciated.</p>
+
+                    </div>
+                    <div class="col l3 s12">
+                        <h5 class="white-text">Connect</h5>
+                        <ul>
+                            <li><a class="white-text" href="#!">sparksite@gmail.com</a></li>
+                            <li><a class="white-text" href="#!">selinalanz.sparksite@gmail.com</a></li>
+                            <li><a class="white-text" href="#!">urielbrawer.sparksite@gmail.com</a></li>
+                            <li><a class="white-text" href="#!">michellerickenmann.sparksite@gmail.com</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-copyright">
+                <div class="container">
+                    Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+                </div>
+            </div>
+        </footer>
+
+        <!--  Scripts-->
+        <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script src="js/materialize.js"></script>
+        <script src="js/init.js"></script>
 
 </body>
 </html>
