changes to index page

--- a/index.html
+++ b/index.html
@@ -35,12 +35,21 @@
     </div>
 </nav>
 
-<div class="section no-pad-bot welcome_screen">
-    <div class="container">
+<div class="welcome-screen">
+    <div class="upper-sparkle">
+        <img src="assets/sparkle.svg" alt="sparkle icon" />
+    </div>
+    <div class="text-container">
         <br><br>
         <h4 class="header center"><b>Our UI/UX is so user-friendly, even <span class="highlights">your cat</span>
             could figure it out</b></h4>
         <br><br>
+    </div>
+    <div class="lower-sparkle">
+        <img src="assets/sparkle.svg" alt="sparkle icon" />
+    </div>
+    <div class="cat-container">
+        <img src="assets/cat_head.png" alt="cat head" id="cat-head" />
     </div>
 </div>
 
