grid for team member bubbles added

--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@
                 <br><br>
             </div>
             <div class="row">
-                <div class="col s12 m4">
+                <div class="center col s12 m6 l4">
                     <a href="selina.html" class="center">
                         <img class="logo" src="assets/sublogo.svg" alt="Sparksite Logo">Selina</a>
                 </div>
 
-                <div class="col s12 m4">
+                <div class="center col s12 m6 l4">
                     <a href="#" class="center">
                         <img class="logo" src="assets/sublogo.svg" alt="Sparksite Logo">Uriel</a>
                 </div>
 
-                <div class="col s12 m4">
+                <div class="center col s12 m6 l4 offset-m3">
                     <a href="#" class="center">
                         <img class="logo" src="assets/sublogo.svg" alt="Sparksite Logo">Michelle</a>
                 </div>
