--- a/index.html
+++ b/index.html
@@ -69,17 +69,19 @@
             <div class="row">
                 <div class="center col s12 m6 l4">
                     <a href="selina.html" class="center">
-                        <img class="logo" src="assets/sublogo.svg" alt="Sparksite Logo">Selina</a>
+                        <img class="logo circle" src="assets/selina/Profilbild.JPG" alt="Sparksite Logo">
+                        <span class="caption">Selina</span>
+                    </a>
                 </div>
 
                 <div class="center col s12 m6 l4">
                     <a href="#" class="center">
-                        <img class="logo" src="assets/sublogo.svg" alt="Sparksite Logo">Uriel</a>
+                        <img class="logo circle" src="assets/sublogo.svg" alt="Sparksite Logo">Uriel</a>
                 </div>
 
                 <div class="center col s12 m6 l4 offset-m3">
                     <a href="#" class="center">
-                        <img class="logo" src="assets/sublogo.svg" alt="Sparksite Logo">Michelle</a>
+                        <img class="logo circle" src="assets/sublogo.svg" alt="Sparksite Logo">Michelle</a>
                 </div>
             </div>
         </div>
