changed welcome screen CSS

--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
         <img src="assets/sparkle.svg" alt="sparkle icon" />
     </div>
     <div class="text-container">
-        <br><br>
-        <h4 class="header center"><b>Our UI/UX is so user-friendly, even <span class="highlights">your cat</span>
-            could figure it out</b></h4>
-        <br><br>
+        <h4 class="header center">Our UI/UX is so user-friendly, even <span class="highlights">your cat</span>
+            could figure it out</h4>
+    </div>
+    <div class="red-cursor">
+        <img src="assets/red_cursor.png" alt="red cursor" />
     </div>
     <div class="lower-sparkle">
         <img src="assets/sparkle.svg" alt="sparkle icon" />
