--- a/selina.html
+++ b/selina.html
@@ -36,178 +36,152 @@
 </nav>
 
 
+<!-- Profile Section -->
 <section class="profil">
 
-    <div class="description">
-        <h1 class="center">Selina Lanz</h1>
-        <img src="assets/selina/Profilbild.JPG" alt="Profilbild" class="responsive-img"/>
-        <h5 class="center">Exploring creativity, innovation, and new horizons—one step at a time!</h5>
-        <p class="light">I'm a 24-year-old Bachelor’s student in iCompetence at the FHNW in Brugg.
-            Creative and open-minded, I enjoy exploring new places, and I'm also an active member of a
-            Guggenmusik. In my free time, I love to read and discover new perspectives through books.</p>
+    <h1 class="center">Selina Lanz</h1>
+    <img src="assets/selina/Profilbild.JPG" alt="Profilbild" class="responsive-img"/>
+    <h5 class="center">Exploring creativity, innovation, and new horizons one step at a time!</h5>
+    <p class="light">
+        I'm a 24-year-old Bachelor’s student in iCompetence at the FHNW in Brugg.
+        Creative and open-minded, I enjoy exploring new places, and I'm also an active member of a
+        Guggenmusik. In my free time, I love to read and discover new perspectives through books.
+    </p>
+</section>
+
+<!-- Skill Section -->
+<section class="skills">
+    <h2>SKILLLS</h2>
+    <div class="skills-container">
+        <div class="coding">
+            <h3>CODING</h3>
+            <p>Java<br>HTML<br>CSS</p>
+        </div>
+        <div class="software">
+            <h3>SOFTWARE</h3>
+            <div class="icons">
+                <img src="assets/selina/icons/figma.png" alt="Figma" class="icon">
+                <img src="assets/selina/icons/indesign.png" alt="InDesign" class="icon">
+                <img src="assets/selina/icons/photoshop.png" alt="Photoshop" class="icon">
+            </div>
+        </div>
+        <div class="skill">
+            <p>UI/UX Design<br>User Research</p>
+        </div>
+    </div>
+</section>
+
+<!-- Projects Section -->
+<section class="projects">
+    <h2>PROJECTS</h2>
+    <!-- Project 1 -->
+    <div class="project">
+        <h4 class="project-title">High Society Gölli Club</h4>
+        <div class="carousel" id="carousel1">
+            <div class="carousel-track">
+                <img src="assets/selina/projects/HSGC/HSGC1.png" alt="Project 1 Image 1">
+                <img src="assets/selina/projects/HSGC/HSGC2.png" alt="Project 1 Image 2">
+                <img src="assets/selina/projects/HSGC/HSGC3.png" alt="Project 1 Image 3">
+                <img src="assets/selina/projects/HSGC/HSGC4.png" alt="Project 1 Image 4">
+            </div>
+            <div class="carousel-dots" id="dots1"></div>
+        </div>
     </div>
 
-    <
+    <!-- Project 2 -->
+    <div class="project">
+        <h4 class="project-title">Guggenmusik Pouseblooser</h4>
+        <div class="carousel" id="carousel2">
+            <div class="carousel-track">
+                <img src="assets/selina/projects/Pouseblooser/GPL1.png" alt="Project 2 Image 1">
+                <img src="assets/selina/projects/Pouseblooser/GPL2.png" alt="Project 2 Image 2">
+                <img src="assets/selina/projects/Pouseblooser/GPL3.png" alt="Project 2 Image 3">
+            </div>
+            <div class="carousel-dots" id="dots2"></div>
+        </div>
+    </div>
+    </div>
+</section>
 
-
-
+<!-- Education Section -->
+<section class="education">
+    <h2>EDUCATION</h2>
+    <div class="education-item">
+        <span>23</span>
+        <p><strong>iCompetence</strong><br>FHNW Brugg</p>
+    </div>
+    <div class="education-item">
+        <span>22-23</span>
+        <p><strong>Professional Maturity</strong><br>Berufsschule Langenthal</p>
+    </div>
 </section>
 
 
-<div class="container">
-    <div class="section">
+<!-- Experience Section -->
+<div class="experience">
+<h2>EXPERIENCE</h2>
+<div class="job">
+    <span>18 - 20</span>
+    <div>
+        <strong>Office clerk</strong>
+        <p>Monitoring and Printing<br>Quart Druck AG Langenthal</p>
+    </div>
+</div>
+</div>
 
-        <!--   Icon Section   -->
-        <div class="row">
-            <div class="col s12 m4">
-                <div class="icon-block">
-                    <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-                    <h5 class="center">Skills</h5>
+<!--Sterne anpassen -->
 
-                    <p class="light">By utilizing elements and principles of Material Design, we were able to create a
-                        framework that incorporates components and animations that provide more feedback to users.
-                        Additionally, a single underlying responsive system across all platforms allow for a more
-                        unified user experience.</p>
-                </div>
-            </div>
+<!-- Language Section -->
+<div class="language">
+    <h2>LANGUAGE</h2>
+    <ul>
+        <li><span>⭐</span> German <small>Native</small></li>
+        <li><span>⭐</span> English <small>Fluent</small></li>
+        <li><span>⭐</span> French <small>Intermediate</small></li>
+    </ul>
+</div>
 
-            <div class="col s12 m4">
-                <div class="icon-block">
-                    <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-                    <h5 class="center">Projects</h5>
-
-                    <p class="light">We have provided detailed documentation as well as specific code examples to help
-                        new users get started. We are also always open to feedback and can answer any questions a user
-                        may have about Materialize.</p>
-                </div>
-            </div>
-
-            <div class="col s12 m4">
-                <div class="icon-block">
-                    <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-                    <h5 class="center">Education</h5>
-                    <ul>
-                        <li>iCompetence FHNW Brugg</li>
-                        <li>Professional Maturity Berufsfachschule Langenthal</li>
-                    </ul>
-                    <p class="light">
-                        Professional Maturity Berufsfachschule Langenthal
-                    </p>
-                </div>
-            </div>
-
-            <div class="col s12 m4">
-                <div class="icon-block">
-                    <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-                    <h5 class="center">Experience</h5>
-
-                    <p class="light">Office clerk Marketing and Printing Kuert Druck AG Langenthal</p>
-                </div>
-            </div>
-
-            <div class="col s12 m4">
-                <div class="icon-block">
-                    <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-                    <h5 class="center">Language</h5>
-
-                    <p class="light">German Native
-                        English Fluent
-                        French Intermediate
-                    </p>
-                </div>
-            </div>
-
-            <div class="col s12 m4">
-                <div class="icon-block">
-                    <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-                    <h5 class="center">Hobbies & Interests</h5>
-
-                    <p class="light"></p>
-                </div>
-            </div>
-
+<!-- Hobbies & Interest Section -->
+<div class="hobbies">
+    <h2>HOBBIES & INTEREST</h2>
+    <div class="hobby-icons">
+        <div class="hobby">
+            <img src="assets/selina/icons/open-book.png" alt="Reading">
+            <p>Reading</p>
         </div>
-
+        <div class="hobby">
+            <img src="assets/selina/icons/sewing-machine.png" alt="Sewing">
+            <p>Sewing</p>
+        </div>
+        <div class="hobby">
+            <img src="assets/selina/icons/skiing.png" alt="Skiing">
+            <p>Skiing</p>
+        </div>
+        <div class="hobby">
+            <img src="assets/selina/icons/musical-note.png" alt="Music">
+            <p>Music</p>
+        </div>
     </div>
 </div>
 
-
-<div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-        <div class="container">
-            <div class="row center">
-                <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
-            </div>
-        </div>
-    </div>
-    <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
-</div>
-
-<div class="container">
-    <div class="section">
-
-        <div class="row">
-            <div class="col s12 center">
-                <h3><i class="mdi-content-send brown-text"></i></h3>
-                <h4>Contact Us</h4>
-                <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque
-                    id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut
-                    ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem
-                    neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu
-                    mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum
-                    ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum
-                    primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
-            </div>
-        </div>
-
-    </div>
-</div>
-
-
-<div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-        <div class="container">
-            <div class="row center">
-                <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
-            </div>
-        </div>
-    </div>
-    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
-</div>
-
-<footer class="page-footer teal">
+<footer class="page-footer">
     <div class="container">
         <div class="row">
-            <div class="col l6 s12">
-                <h5 class="white-text">Company Bio</h5>
-                <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's
-                    our full time job. Any amount would help support and continue development on this project and is
-                    greatly appreciated.</p>
-
-            </div>
             <div class="col l3 s12">
-                <h5 class="white-text">Connect</h5>
-                <ul>
-                    <li><a class="white-text" href="#!">sparksite@gmail.com</a></li>
-                    <li><a class="white-text" href="#!">selinalanz.sparksite@gmail.com</a></li>
-                    <li><a class="white-text" href="#!">urielbrawer.sparksite@gmail.com</a></li>
-                    <li><a class="white-text" href="#!">michellerickenmann.sparksite@gmail.com</a></li>
-                </ul>
+                <h5 class="white-text">Contact</h5>
+                <p>Email<br><a href="mailto:selina.lanz@students.fhnw.ch">selina.lanz@students.fhnw.ch</a></p>
+                <p>Phone<br>+41 76 543 27 19</p>
             </div>
-        </div>
-    </div>
-    <div class="footer-copyright">
-        <div class="container">
-            Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
         </div>
     </div>
 </footer>
-
 
 <!--  Scripts-->
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="js/materialize.js"></script>
 <script src="js/init.js"></script>
+<script src="assets/js/carousel.js"></script>
+
 
 </body>
 </html>
