--- a/index.html
+++ b/index.html
@@ -61,10 +61,8 @@
                 <h3 class="header center"><b>Hello there</b></h3>
             </div>
             <div class="container">
-                <br><br>
-                <h4 class="header center"><b>We’re a team of three <span class="highlights">passionate developers</span>,
-                    turning ideas into powerful digital solutions. </b></h4>
-                <br><br>
+                <h4 class="header center">We’re a team of three <span class="highlights">passionate developers</span>,
+                    turning ideas into powerful digital solutions. </h4>
             </div>
             <div class="row">
                 <div class="center col s12 m6 l4">
@@ -87,14 +85,11 @@
         </div>
         <div class="container">
             <br><br>
-            <h4 class="header"><b>We create sleek web apps and robust backend systems with a focus on intuitive UI/UX.</b>
-                <br></br>
-                <b>Committed to clean code and exceptional design, we’re your partners in innovation.</b></h4>
-            <br><br>
+            <h4>We create sleek web apps and robust backend systems with a focus on intuitive UI/UX.</h4>
+                <h4>Committed to clean code and exceptional design, we’re your partners in innovation.</h4>
         </div>
 
         <div class="container">
-            <br><br>
             <a href="contact.html" class="link"><b>Let’s collaborate!</b></a>
         </div>
 
