fixed carousel javascript

--- a/selina.html
+++ b/selina.html
@@ -77,29 +77,30 @@
     <!-- Project 1 -->
     <div class="project">
         <h4 class="project-title">High Society Gölli Club</h4>
-        <div class="carousel" id="carousel1">
-            <div class="carousel-track">
-                <img src="assets/selina/projects/HSGC/HSGC1.png" alt="Project 1 Image 1">
-                <img src="assets/selina/projects/HSGC/HSGC2.png" alt="Project 1 Image 2">
-                <img src="assets/selina/projects/HSGC/HSGC3.png" alt="Project 1 Image 3">
-                <img src="assets/selina/projects/HSGC/HSGC4.png" alt="Project 1 Image 4">
+        <div class="carousel-container">
+            <button class="carousel-arrow prev"><i class="material-icons">chevron_left</i></button>
+            <div class="carousel carousel-slider" id="carousel1">
+                <a class="carousel-item" href="#one!"><img src="assets/selina/projects/HSGC/HSGC1.png" alt="Project 1 Image 1"></a>
+                <a class="carousel-item" href="#two!"><img src="assets/selina/projects/HSGC/HSGC2.png" alt="Project 1 Image 2"></a>
+                <a class="carousel-item" href="#three!"><img src="assets/selina/projects/HSGC/HSGC3.png" alt="Project 1 Image 3"></a>
+                <a class="carousel-item" href="#four!"><img src="assets/selina/projects/HSGC/HSGC4.png" alt="Project 1 Image 4"></a>
             </div>
-            <div class="carousel-dots" id="dots1"></div>
+            <button class="carousel-arrow next"><i class="material-icons">chevron_right</i></button>
         </div>
     </div>
 
     <!-- Project 2 -->
     <div class="project">
         <h4 class="project-title">Guggenmusik Pouseblooser</h4>
-        <div class="carousel" id="carousel2">
-            <div class="carousel-track">
-                <img src="assets/selina/projects/Pouseblooser/GPL1.png" alt="Project 2 Image 1">
-                <img src="assets/selina/projects/Pouseblooser/GPL2.png" alt="Project 2 Image 2">
-                <img src="assets/selina/projects/Pouseblooser/GPL3.png" alt="Project 2 Image 3">
+        <div class="carousel-container">
+            <button class="carousel-arrow prev"><i class="material-icons">chevron_left</i></button>
+            <div class="carousel carousel-slider" id="carousel2">
+                <a class="carousel-item" href="#one!"><img src="assets/selina/projects/Pouseblooser/GPL1.png" alt="Project 2 Image 1"></a>
+                <a class="carousel-item" href="#two!"><img src="assets/selina/projects/Pouseblooser/GPL2.png" alt="Project 2 Image 2"></a>
+                <a class="carousel-item" href="#three!"><img src="assets/selina/projects/Pouseblooser/GPL3.png" alt="Project 2 Image 3"></a>
             </div>
-            <div class="carousel-dots" id="dots2"></div>
+            <button class="carousel-arrow next"><i class="material-icons">chevron_right</i></button>
         </div>
-    </div>
     </div>
 </section>
 
@@ -180,8 +181,6 @@
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="js/materialize.js"></script>
 <script src="js/init.js"></script>
-<script src="assets/js/carousel.js"></script>
-
 
 </body>
 </html>
