made navigation bar and footer consistent

--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,8 @@
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 
-<nav class="white" role="navigation">
-    <div class="nav-wrapper container">
+<nav class="nav-bar" role="navigation">
+    <div class="nav-wrapper">
         <a id="logo-container" href="index.html" class="brand-logo">
             <img src="assets/sparksite_logo.svg" alt="Sparksite Logo">
             sparksite</a>
@@ -63,7 +63,8 @@
                 <div class="col-md-12">
                     <div class="form-group">
                         <label class="label" for="message">Message</label>
-                        <textarea class="form-control" name="message" id="message" placeholder="Message" rows="4"></textarea>
+                        <textarea class="form-control" name="message" id="message" placeholder="Message"
+                                  rows="4"></textarea>
                     </div>
                 </div>
                 <div class="col-md-12 button-container">
@@ -71,41 +72,28 @@
                 </div>
             </div>
         </form>
+    </div>
+</div>
 
-        <footer class="page-footer teal">
-            <div class="container">
-                <div class="row">
-                    <div class="col l6 s12">
-                        <h5 class="white-text">Company Bio</h5>
-                        <p class="grey-text text-lighten-4">We are a team of college students working on this project
-                            like it's
-                            our full time job. Any amount would help support and continue development on this project
-                            and is
-                            greatly appreciated.</p>
-
-                    </div>
-                    <div class="col l3 s12">
-                        <h5 class="white-text">Connect</h5>
-                        <ul>
-                            <li><a class="white-text" href="#!">sparksite@gmail.com</a></li>
-                            <li><a class="white-text" href="#!">selinalanz.sparksite@gmail.com</a></li>
-                            <li><a class="white-text" href="#!">urielbrawer.sparksite@gmail.com</a></li>
-                            <li><a class="white-text" href="#!">michellerickenmann.sparksite@gmail.com</a></li>
-                        </ul>
-                    </div>
-                </div>
+<footer class="page-footer">
+    <div class="container">
+        <div class="row">
+            <div class="col l3 s12">
+                <h5 class="white-text">Connect</h5>
+                <ul>
+                    <li><a class="white-text" href="#!">sparksite@gmail.com</a></li>
+                    <li><a class="white-text" href="#!">selinalanz.sparksite@gmail.com</a></li>
+                    <li><a class="white-text" href="#!">urielbrawer.sparksite@gmail.com</a></li>
+                    <li><a class="white-text" href="#!">michellerickenmann.sparksite@gmail.com</a></li>
+                </ul>
             </div>
-            <div class="footer-copyright">
-                <div class="container">
-                    Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
-                </div>
-            </div>
-        </footer>
+        </div>
+    </div>
+</footer>
 
-        <!--  Scripts-->
-        <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-        <script src="js/materialize.js"></script>
-        <script src="js/init.js"></script>
-
+<!--  Scripts-->
+<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="js/materialize.js"></script>
+<script src="js/init.js"></script>
 </body>
 </html>
