--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
-<nav class="white" role="navigation">
-    <div class="nav-wrapper container">
+<nav class="nav-bar" role="navigation">
+    <div class="nav-wrapper">
         <a id="logo-container" href="index.html" class="brand-logo">
             <img src="assets/sparksite_logo.svg" alt="Sparksite Logo">
             sparksite</a>
@@ -93,20 +93,12 @@
         <div class="container">
             <a href="contact.html" class="link"><b>Let’s collaborate!</b></a>
         </div>
-
     </div>
 </div>
 
 <footer class="page-footer">
     <div class="container">
         <div class="row">
-            <div class="col l6 s12">
-                <h5 class="white-text">Company Bio</h5>
-                <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's
-                    our full time job. Any amount would help support and continue development on this project and is
-                    greatly appreciated.</p>
-
-            </div>
             <div class="col l3 s12">
                 <h5 class="white-text">Connect</h5>
                 <ul>
@@ -116,11 +108,6 @@
                     <li><a class="white-text" href="#!">michellerickenmann.sparksite@gmail.com</a></li>
                 </ul>
             </div>
-        </div>
-    </div>
-    <div class="footer-copyright">
-        <div class="container">
-            Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
         </div>
     </div>
 </footer>
