--- a/selina.html
+++ b/selina.html
@@ -11,8 +11,8 @@
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
-<nav class="white" role="navigation">
-    <div class="nav-wrapper container">
+<nav class="nav-bar" role="navigation">
+    <div class="nav-wrapper">
         <a id="logo-container" href="index.html" class="brand-logo">
             <img src="assets/sparksite_logo.svg" alt="Sparksite Logo">
             sparksite</a>
@@ -169,9 +169,13 @@
     <div class="container">
         <div class="row">
             <div class="col l3 s12">
-                <h5 class="white-text">Contact</h5>
-                <p>Email<br><a href="mailto:selina.lanz@students.fhnw.ch">selina.lanz@students.fhnw.ch</a></p>
-                <p>Phone<br>+41 76 543 27 19</p>
+                <h5 class="white-text">Connect</h5>
+                <ul>
+                    <li><a class="white-text" href="#!">sparksite@gmail.com</a></li>
+                    <li><a class="white-text" href="#!">selinalanz.sparksite@gmail.com</a></li>
+                    <li><a class="white-text" href="#!">urielbrawer.sparksite@gmail.com</a></li>
+                    <li><a class="white-text" href="#!">michellerickenmann.sparksite@gmail.com</a></li>
+                </ul>
             </div>
         </div>
     </div>
