minor changes in skills

--- a/selina.html
+++ b/selina.html
@@ -51,7 +51,7 @@
 
 <!-- Skill Section -->
 <section class="skills">
-    <h2>SKILLLS</h2>
+    <h2>skills</h2>
     <div class="skills-container">
         <div class="coding">
             <h3>CODING</h3>
