replaces cat png with svg

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <img src="assets/sparkle.svg" alt="sparkle icon" />
     </div>
     <div class="cat-container">
-        <img src="assets/cat_head.png" alt="cat head" id="cat-head" />
+        <img src="assets/cat_head.svg" alt="cat head" id="cat-head" />
     </div>
 </div>
 
