team member section on main page with animations

--- a/index.html
+++ b/index.html
@@ -67,20 +67,24 @@
             </div>
             <div class="row">
                 <div class="center col s12 m6 l4">
-                    <a href="selina.html" class="center">
-                        <img class="logo circle" src="assets/selina/Profilbild.JPG" alt="Sparksite Logo">
+                    <a href="selina.html" class="center image_caption_container">
                         <span class="caption">Selina</span>
+                        <img class="circle" src="assets/selina/Profilbild.JPG" alt="Sparksite Logo">
                     </a>
                 </div>
 
                 <div class="center col s12 m6 l4">
-                    <a href="#" class="center">
-                        <img class="logo circle" src="assets/sublogo.svg" alt="Sparksite Logo">Uriel</a>
+                    <a href="#" class="center image_caption_container">
+                        <span class="caption">Michelle</span> 
+                        <img class="circle" src="assets/sublogo.svg" alt="Sparksite Logo">
+                    </a>
                 </div>
 
                 <div class="center col s12 m6 l4 offset-m3">
-                    <a href="#" class="center">
-                        <img class="logo circle" src="assets/sublogo.svg" alt="Sparksite Logo">Michelle</a>
+                    <a href="#" class="center image_caption_container">
+                        <span class="caption">Uriel</span>
+                        <img class="circle" src="assets/sublogo.svg" alt="Sparksite Logo">
+                    </a>
                 </div>
             </div>
         </div>
