small changes in css

--- a/selina.html
+++ b/selina.html
@@ -125,7 +125,7 @@
     <span>18 - 20</span>
     <div>
         <strong>Office clerk</strong>
-        <p>Monitoring and Printing<br>Quart Druck AG Langenthal</p>
+        <p>Marketing & Printing<br>Kuert Druck AG Langenthal</p>
     </div>
 </div>
 </div>
