--- a/selina.html
+++ b/selina.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+
 </head>
 <body>
 <nav class="nav-bar" role="navigation">
@@ -65,8 +66,10 @@
                 <img src="assets/selina/icons/photoshop.png" alt="Photoshop" class="icon">
             </div>
         </div>
-        <div class="skill">
+        <div class="skills-container">
+            <h3>User-Centered Design</h3>
             <p>UI/UX Design<br>User Research</p>
+
         </div>
     </div>
 </section>
