--- a/selina.html
+++ b/selina.html
@@ -83,10 +83,14 @@
         <div class="carousel-container">
             <button class="carousel-arrow prev"><i class="material-icons">chevron_left</i></button>
             <div class="carousel carousel-slider" id="carousel1">
-                <a class="carousel-item" href="#one!"><img src="assets/selina/projects/HSGC/HSGC1.png" alt="Project 1 Image 1"></a>
-                <a class="carousel-item" href="#two!"><img src="assets/selina/projects/HSGC/HSGC2.png" alt="Project 1 Image 2"></a>
-                <a class="carousel-item" href="#three!"><img src="assets/selina/projects/HSGC/HSGC3.png" alt="Project 1 Image 3"></a>
-                <a class="carousel-item" href="#four!"><img src="assets/selina/projects/HSGC/HSGC4.png" alt="Project 1 Image 4"></a>
+                <a class="carousel-item" href="#one!"><img src="assets/selina/projects/HSGC/HSGC1.png"
+                                                           alt="Project 1 Image 1"></a>
+                <a class="carousel-item" href="#two!"><img src="assets/selina/projects/HSGC/HSGC2.png"
+                                                           alt="Project 1 Image 2"></a>
+                <a class="carousel-item" href="#three!"><img src="assets/selina/projects/HSGC/HSGC3.png"
+                                                             alt="Project 1 Image 3"></a>
+                <a class="carousel-item" href="#four!"><img src="assets/selina/projects/HSGC/HSGC4.png"
+                                                            alt="Project 1 Image 4"></a>
             </div>
             <button class="carousel-arrow next"><i class="material-icons">chevron_right</i></button>
         </div>
@@ -98,9 +102,12 @@
         <div class="carousel-container">
             <button class="carousel-arrow prev"><i class="material-icons">chevron_left</i></button>
             <div class="carousel carousel-slider" id="carousel2">
-                <a class="carousel-item" href="#one!"><img src="assets/selina/projects/Pouseblooser/GPL1.png" alt="Project 2 Image 1"></a>
-                <a class="carousel-item" href="#two!"><img src="assets/selina/projects/Pouseblooser/GPL2.png" alt="Project 2 Image 2"></a>
-                <a class="carousel-item" href="#three!"><img src="assets/selina/projects/Pouseblooser/GPL3.png" alt="Project 2 Image 3"></a>
+                <a class="carousel-item" href="#one!"><img src="assets/selina/projects/Pouseblooser/GPL1.png"
+                                                           alt="Project 2 Image 1"></a>
+                <a class="carousel-item" href="#two!"><img src="assets/selina/projects/Pouseblooser/GPL2.png"
+                                                           alt="Project 2 Image 2"></a>
+                <a class="carousel-item" href="#three!"><img src="assets/selina/projects/Pouseblooser/GPL3.png"
+                                                             alt="Project 2 Image 3"></a>
             </div>
             <button class="carousel-arrow next"><i class="material-icons">chevron_right</i></button>
         </div>
@@ -111,26 +118,34 @@
 <section class="education">
     <h2>EDUCATION</h2>
     <div class="education-item">
+        <img src="assets/sublogo.svg" alt="Sparksite Logo"/>
         <span>23</span>
-        <p><strong>iCompetence</strong><br>FHNW Brugg</p>
+        <div class="education-text">
+        <p class="course-name">iCompetence</p>
+        <p class="institution-name">FHNW Brugg</p>
+        </div>
     </div>
     <div class="education-item">
-        <span>22-23</span>
-        <p><strong>Professional Maturity</strong><br>Berufsschule Langenthal</p>
-    </div>
+        <img src="assets/sublogo.svg" alt="Sparksite Logo"/>
+        <span>22&nbsp;-<br>23</span>
+        <div class="education-text">
+            <p class="course-name">Professional Maturity</p>
+            <p class="institution-name">Berufsschule Langenthal</p>
+        </div>
+        </div>
 </section>
-
 
 <!-- Experience Section -->
 <div class="experience">
-<h2>EXPERIENCE</h2>
-<div class="job">
-    <span>18 - 20</span>
-    <div>
-        <strong>Office clerk</strong>
-        <p>Marketing & Printing<br>Kuert Druck AG Langenthal</p>
+    <h2>EXPERIENCE</h2>
+    <div class="experience-item">
+        <img src="assets/sublogo.svg" alt="Sparksite Logo"/>
+        <span>18&nbsp;-<br>20</span>
+        <div class="experience-text">
+            <p class="job-titel">Office clerk</p>
+            <p class="company-name">Marketing & Printing<br>Kuert Druck AG Langenthal</p>
+        </div>
     </div>
-</div>
 </div>
 
 <!--Sterne anpassen -->
@@ -139,9 +154,9 @@
 <div class="language">
     <h2>LANGUAGE</h2>
     <ul>
-        <li><span>⭐</span> German <small>Native</small></li>
-        <li><span>⭐</span> English <small>Fluent</small></li>
-        <li><span>⭐</span> French <small>Intermediate</small></li>
+        <img src="assets/sublogo.svg" alt="Sparksite Logo"/> German <small>Native</small></li>
+        <img src="assets/sublogo.svg" alt="Sparksite Logo"/> English <small>Fluent</small></li>
+        <img src="assets/sublogo.svg" alt="Sparksite Logo"/> French <small>Intermediate</small></li>
     </ul>
 </div>
 
