footer und language angepasst

--- a/selina.html
+++ b/selina.html
@@ -121,8 +121,8 @@
         <img src="assets/sublogo.svg" alt="Sparksite Logo"/>
         <span>23</span>
         <div class="education-text">
-        <p class="course-name">iCompetence</p>
-        <p class="institution-name">FHNW Brugg</p>
+            <p class="course-name">iCompetence</p>
+            <p class="institution-name">FHNW Brugg</p>
         </div>
     </div>
     <div class="education-item">
@@ -132,11 +132,11 @@
             <p class="course-name">Professional Maturity</p>
             <p class="institution-name">Berufsschule Langenthal</p>
         </div>
-        </div>
+    </div>
 </section>
 
 <!-- Experience Section -->
-<div class="experience">
+<section class="experience">
     <h2>EXPERIENCE</h2>
     <div class="experience-item">
         <img src="assets/sublogo.svg" alt="Sparksite Logo"/>
@@ -146,19 +146,33 @@
             <p class="company-name">Marketing & Printing<br>Kuert Druck AG Langenthal</p>
         </div>
     </div>
-</div>
-
-<!--Sterne anpassen -->
+</section>
 
 <!-- Language Section -->
-<div class="language">
+<section class="languages">
     <h2>LANGUAGE</h2>
-    <ul>
-        <img src="assets/sublogo.svg" alt="Sparksite Logo"/> German <small>Native</small></li>
-        <img src="assets/sublogo.svg" alt="Sparksite Logo"/> English <small>Fluent</small></li>
-        <img src="assets/sublogo.svg" alt="Sparksite Logo"/> French <small>Intermediate</small></li>
-    </ul>
-</div>
+    <div class="language-item">
+        <img src="assets/sublogo.svg" alt="Sparksite Logo"/>
+        <div class="language-text">
+            <p class="language">German</p>
+            <p class="level">Native</p>
+        </div>
+    </div>
+    <div class="language-item">
+        <img src="assets/sublogo.svg" alt="Sparksite Logo"/>
+        <div class="language-text">
+            <p class="language">English</p>
+            <p class="level">Fluent</p>
+        </div>
+    </div>
+    <div class="language-item">
+        <img src="assets/sublogo.svg" alt="Sparksite Logo"/>
+        <div class="language-text">
+            <p class="language">French</p>
+            <p class="level">Intermediate</p>
+        </div>
+    </div>
+</section>
 
 <!-- Hobbies & Interest Section -->
 <div class="hobbies">
@@ -187,13 +201,11 @@
     <div class="container">
         <div class="row">
             <div class="col l3 s12">
-                <h5 class="white-text">Connect</h5>
-                <ul>
-                    <li><a class="white-text" href="#!">sparksite@gmail.com</a></li>
-                    <li><a class="white-text" href="#!">selinalanz.sparksite@gmail.com</a></li>
-                    <li><a class="white-text" href="#!">urielbrawer.sparksite@gmail.com</a></li>
-                    <li><a class="white-text" href="#!">michellerickenmann.sparksite@gmail.com</a></li>
-                </ul>
+                <h2>Connect</h2>
+                <h5 class="white-text">Email</h5>
+                <p>selinalanz.sparksite@gmail.com</p>
+                <h5 class="white-text">Phone</h5>
+                <p>+41 123 44 55</p>
             </div>
         </div>
     </div>
