--- a/selina.html
+++ b/selina.html
@@ -203,7 +203,7 @@
             <div class="col l3 s12">
                 <h2>Connect</h2>
                 <h5 class="white-text">Email</h5>
-                <p>selinalanz.sparksite@gmail.com</p>
+                <p><a href ="mailto:selinalanz.sparksite@gmail.com">selinalanz.sparksite@gmail.com</a></p>
                 <h5 class="white-text">Phone</h5>
                 <p>+41 123 44 55</p>
             </div>
