changes in index page

--- a/index.html
+++ b/index.html
@@ -31,30 +31,73 @@
             <li><a href="#">Michelle Rickenmann</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
-        <a href="#" data-target="nav-mobile" class="sidenav-trigger" id ="hamburger"><i class="material-icons">menu</i></a>
+        <a href="#" data-target="nav-mobile" class="sidenav-trigger" id="hamburger"><i
+                class="material-icons">menu</i></a>
     </div>
 </nav>
 
 <div class="welcome-screen">
     <div class="upper-sparkle">
-        <img src="assets/sparkle.svg" alt="sparkle icon" />
+        <img src="assets/sparkle.svg" alt="sparkle icon"/>
     </div>
     <div class="text-container">
         <h4 class="header center">Our UI/UX is so user-friendly, even <span class="highlights">your cat</span>
             could figure it out</h4>
     </div>
     <div class="red-cursor">
-        <img src="assets/red_cursor.png" alt="red cursor" />
+        <img src="assets/red_cursor.png" alt="red cursor"/>
     </div>
     <div class="lower-sparkle">
-        <img src="assets/sparkle.svg" alt="sparkle icon" />
+        <img src="assets/sparkle.svg" alt="sparkle icon"/>
     </div>
     <div class="cat-container">
-        <img src="assets/cat_head.svg" alt="cat head" id="cat-head" />
+        <img src="assets/cat_head.svg" alt="cat head" id="cat-head"/>
     </div>
 </div>
 
+<div class="green-section">
+    <div>
+        <h3 class="header center"><b>Hello there</b></h3>
+    </div>
+    <div class="container">
+        <h4 class="header center">We’re a team of three <span class="highlights2">passionate developers</span>,
+            turning ideas into powerful digital solutions. </h4>
+    </div>
+    <div class="row">
+        <div class="center col s12 m6 l4">
+            <a href="selina.html" class="center image_caption_container">
+                <span class="caption">Selina</span>
+                <img class="circle" src="assets/selina/Profilbild.JPG" alt="Sparksite Logo">
+            </a>
+        </div>
 
+        <div class="center col s12 m6 l4">
+            <a href="#" class="center image_caption_container">
+                <span class="caption">Michelle</span>
+                <img class="circle" src="assets/sublogo.svg" alt="Sparksite Logo">
+            </a>
+        </div>
+
+        <div class="center col s12 m6 l4 offset-m3">
+            <a href="#" class="center image_caption_container">
+                <span class="caption">Uriel</span>
+                <img class="circle" src="assets/sublogo.svg" alt="Sparksite Logo">
+            </a>
+        </div>
+    </div>
+</div>
+
+<div class="end-section">
+    <div class="container">
+        <h4>We create sleek web apps and robust backend systems with a focus on intuitive UI/UX.</h4>
+        <h4>Committed to clean code and exceptional design, we’re your partners in innovation.</h4>
+    </div>
+    <div class="container">
+        <a href="contact.html" class="link"><b>Let’s collaborate!</b></a>
+    </div>
+</div>
+
+<!--
 <div class="container">
     <div class="section">
         <div class="green_block">
@@ -62,7 +105,7 @@
                 <h3 class="header center"><b>Hello there</b></h3>
             </div>
             <div class="container">
-                <h4 class="header center">We’re a team of three <span class="highlights">passionate developers</span>,
+                <h4 class="header center">We’re a team of three <span class="highlights2">passionate developers</span>,
                     turning ideas into powerful digital solutions. </h4>
             </div>
             <div class="row">
@@ -75,7 +118,7 @@
 
                 <div class="center col s12 m6 l4">
                     <a href="#" class="center image_caption_container">
-                        <span class="caption">Michelle</span> 
+                        <span class="caption">Michelle</span>
                         <img class="circle" src="assets/sublogo.svg" alt="Sparksite Logo">
                     </a>
                 </div>
@@ -91,7 +134,7 @@
         <div class="container">
             <br><br>
             <h4>We create sleek web apps and robust backend systems with a focus on intuitive UI/UX.</h4>
-                <h4>Committed to clean code and exceptional design, we’re your partners in innovation.</h4>
+            <h4>Committed to clean code and exceptional design, we’re your partners in innovation.</h4>
         </div>
 
         <div class="container">
@@ -99,6 +142,7 @@
         </div>
     </div>
 </div>
+-->
 
 <footer class="page-footer">
     <div class="container">
