Let's collaborate! zentriert

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <h4>We create sleek web apps and robust backend systems with a focus on intuitive UI/UX.</h4>
         <h4>Committed to clean code and exceptional design, we’re your partners in innovation.</h4>
     </div>
-    <div class="container">
+    <div class="container center-text">
         <a href="contact.html" class="link"><b>Let’s collaborate!</b></a>
     </div>
 </div>
