changed index html based on validation

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sparksite</title>
 
-    <!-- CSS  -->
+    <!-- CSS -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen">
+    <link href="css/style.css" type="text/css" rel="stylesheet" media="screen">
 </head>
 <body>
-<nav class="nav-bar" role="navigation">
+<nav class="nav-bar">
     <div class="nav-wrapper">
         <a id="logo-container" href="index.html" class="brand-logo">
             <img src="assets/sparksite_logo.svg" alt="Sparksite Logo">
@@ -38,20 +38,20 @@
 
 <div class="welcome-screen">
     <div class="upper-sparkle">
-        <img src="assets/sparkle.svg" alt="sparkle icon"/>
+        <img src="assets/sparkle.svg" alt="sparkle icon">
     </div>
     <div class="text-container">
         <h4 class="header center">Our UI/UX is so user-friendly, even <span class="highlights">your cat</span>
             could figure it out</h4>
     </div>
     <div class="red-cursor">
-        <img src="assets/red_cursor.png" alt="red cursor"/>
+        <img src="assets/red_cursor.png" alt="red cursor">
     </div>
     <div class="lower-sparkle">
-        <img src="assets/sparkle.svg" alt="sparkle icon"/>
+        <img src="assets/sparkle.svg" alt="sparkle icon">
     </div>
     <div class="cat-container">
-        <img src="assets/cat_head.svg" alt="cat head" id="cat-head"/>
+        <img src="assets/cat_head.svg" alt="cat head" id="cat-head">
     </div>
 </div>
 
@@ -67,21 +67,21 @@
         <div class="center col s12 m6 l4">
             <a href="selina.html" class="center image_caption_container">
                 <span class="caption">Selina</span>
-                <img class="circle" src="assets/selina/Profilbild.JPG" alt="Sparksite Logo">
+                <img class="circle" src="assets/selina/Profilbild.JPG" alt="Selina Lanz">
             </a>
         </div>
 
         <div class="center col s12 m6 l4">
             <a href="#" class="center image_caption_container">
                 <span class="caption">Michelle</span>
-                <img class="circle" src="assets/sublogo.svg" alt="Sparksite Logo">
+                <img class="circle" src="assets/sublogo.svg" alt="Michelle Rickenmann">
             </a>
         </div>
 
         <div class="center col s12 m6 l4 offset-m3">
             <a href="#" class="center image_caption_container">
                 <span class="caption">Uriel</span>
-                <img class="circle" src="assets/sublogo.svg" alt="Sparksite Logo">
+                <img class="circle" src="assets/sublogo.svg" alt="Uriel Brawer">
             </a>
         </div>
     </div>
@@ -96,53 +96,6 @@
         <a href="contact.html" class="link"><b>Let’s collaborate!</b></a>
     </div>
 </div>
-
-<!--
-<div class="container">
-    <div class="section">
-        <div class="green_block">
-            <div>
-                <h3 class="header center"><b>Hello there</b></h3>
-            </div>
-            <div class="container">
-                <h4 class="header center">We’re a team of three <span class="highlights2">passionate developers</span>,
-                    turning ideas into powerful digital solutions. </h4>
-            </div>
-            <div class="row">
-                <div class="center col s12 m6 l4">
-                    <a href="selina.html" class="center image_caption_container">
-                        <span class="caption">Selina</span>
-                        <img class="circle" src="assets/selina/Profilbild.JPG" alt="Sparksite Logo">
-                    </a>
-                </div>
-
-                <div class="center col s12 m6 l4">
-                    <a href="#" class="center image_caption_container">
-                        <span class="caption">Michelle</span>
-                        <img class="circle" src="assets/sublogo.svg" alt="Sparksite Logo">
-                    </a>
-                </div>
-
-                <div class="center col s12 m6 l4 offset-m3">
-                    <a href="#" class="center image_caption_container">
-                        <span class="caption">Uriel</span>
-                        <img class="circle" src="assets/sublogo.svg" alt="Sparksite Logo">
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <br><br>
-            <h4>We create sleek web apps and robust backend systems with a focus on intuitive UI/UX.</h4>
-            <h4>Committed to clean code and exceptional design, we’re your partners in innovation.</h4>
-        </div>
-
-        <div class="container">
-            <a href="contact.html" class="link"><b>Let’s collaborate!</b></a>
-        </div>
-    </div>
-</div>
--->
 
 <footer class="page-footer">
     <div class="container">
@@ -160,8 +113,7 @@
     </div>
 </footer>
 
-
-<!--  Scripts-->
+<!-- Scripts -->
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="js/materialize.js"></script>
 <script src="js/init.js"></script>
